# zephyr_confidential_ai

./: CMakeLists.txt  Kconfig  LICENSE.md  ProvisioningWorkflow.md  README-manual-provisioning.md  README.rst  overlay-network.conf  prj.conf  sample.yaml  west.yml
.github/workflows/: ci.yml  do_not_merge.yml  flow.yml
boards/: b_u585i_iot02a_ns.conf  b_u585i_iot02a_ns.overlay  mps3_an547.conf  mps3_an547.overlay
ci_certs/: bootstrap_crt.txt  bootstrap_key.txt  ca_crt.txt
docs/: crypto-flow.md  enc-payload.md  hw-ethernet.md  hw-wifi-esp.md
ext/NanoCBOR/src/: decoder.c
flow/: .gitignore  config.py
include/: azure.h  bootstrap.h  device_client_tls_key.h  dhcpwait.h  infer_mgmt.h  key_mgmt.h  netmon_stats.h  provision.h  shell_common.h  sntp_client.h  tfm_partition_aat.h  tfm_partition_huk.h  tfm_partition_tflm.h  tfm_partition_utvm.h  util_app_log.h  x509_csr_gen.h
include/cose/: cose_verify.h  mbedtls_ecdsa_verify_sign.h
patch/: tfm.patch
src/: .gitignore  azure-config.h  azure.c  bootstrap.c  device_client_tls_key.c  dhcpwait.c  infer_mgmt.c  key_mgmt.c  main.c  provision.c  test_certs.c  test_certs.h  tfm_partition_aat.c  tfm_partition_huk.c  tfm_partition_tflm.c  tfm_partition_utvm.c  util_app_log.c  x509_csr_gen.c
src/certmgr/: bootstrap.c  cert_mgmt.c  provision.c  test_certs.c
src/cose/: cose_verify.c  mbedtls_ecdsa_verify_sign.c
src/network/: dhcpwait.c  netmon_mgmt.c  netmon_stats.c  sntp_client.c
src/shell/: cmd_azure.c  cmd_infer.c  cmd_info.c  cmd_keys.c  shell_common.c
src/tls_config/: user-tls.h
tests/tfm_sp/test_service/: tfm_test_helper_service_api.c  tfm_test_helper_service_api.h
tests/tfm_sp/tfm_huk_deriv_srv/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/tfm_sp/tfm_huk_deriv_srv/src/: main.c
tfm_secure_partitions/: CMakeLists.txt  tfm_manifest_list.yaml.in
tfm_secure_partitions/tfm_aat_service/: CMakeLists.txt  tfm_aat_service.c  tfm_aat_service.h  tfm_aat_service.yaml
tfm_secure_partitions/tfm_huk_deriv_srv/: CMakeLists.txt  aat.c  aat.h  cbor_cose.c  cbor_cose.h  cbor_cose_api.h  config.cmake  nv_ps_counters.c  nv_ps_counters.h  tfm_huk_deriv_srv.c  tfm_huk_deriv_srv.h  tfm_huk_deriv_srv.yaml  tfm_huk_deriv_srv_api.c  tfm_huk_deriv_srv_api.h
tfm_secure_partitions/tfm_test_helper_service/: CMakeLists.txt  README.md  tfm_test_helper_service.c  tfm_test_helper_service.yaml
tfm_secure_partitions/tfm_tflm_service/: CMakeLists.txt  README.md  tfm_tflm_service.c  tfm_tflm_service.yaml  tfm_tflm_service_api.c  tfm_tflm_service_api.h
tfm_secure_partitions/tfm_tflm_service/hello_world/: CMakeLists.txt  constants.cc  constants.h  main_functions.cc  main_functions.h
tfm_secure_partitions/tfm_tflm_service/tflm/: CMakeLists.txt  VERSION.txt
tfm_secure_partitions/tfm_utvm_service/: CMakeLists.txt  README.md  tfm_utvm_service.c  tfm_utvm_service.yaml  tfm_utvm_service_api.c  tfm_utvm_service_api.h
tfm_secure_partitions/tfm_utvm_service/tfm_utvm_platform/: utvm_platform.c  utvm_platform.h
tfm_secure_partitions/tfm_utvm_service/utvm/: CMakeLists.txt  LICENSE
tfm_secure_partitions/tfm_utvm_service/utvm/sine/: metadata.json
tfm_secure_partitions/tfm_utvm_service/utvm/sine/codegen/host/include/: tvmgen_default.h
tfm_secure_partitions/tfm_utvm_service/utvm/sine/codegen/host/src/: default_lib0.c  default_lib1.c
tfm_secure_partitions/tfm_utvm_service/utvm/sine/src/: relay.txt
tools/: README.rst
tools/cose_verify/: cose_verify.py
tools/flow/: .gitignore  Cargo.toml  README.md  ca.py  config.py  create-certs.sh  flow.py  keys.py
tools/flow/src/: crypto.rs  data.rs  errors.rs  keys.rs  main.rs  pdump.rs  test.rs
