[package]
name = "flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.1"
aes-kw = "0.2.1"
base64 = "0.21.0"
ciborium = "0.2.0"
clap = { version = "4.0.27", features = ["derive"] }
coset = { version = "0.3.4", features = ["std"] }
env_logger = "0.10.0"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.17"
p256 = { version = "0.12.0", features = ["ecdh", "ecdsa", "pkcs8", "pem"] }
pem = "1.1.0"
rand_core = "0.6.4"
ring = "0.16.20"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
temp-dir = "0.1.11"
thiserror = "1.0.40"
x509-parser = "0.14.0"
